gcp/compute/gke/services/backend-v1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      run: backend-v1
  template:
    metadata:
      labels:
        run: backend-v1
        name: backend-v1
    spec:
      containers:
      - image: cloudadc/backend:0.1.4
        name: backend-v1
        ports:
        - containerPort: 8080
          protocol: TCP
