gcp/compute/gke/services/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
  namespace: backend
spec:
  type: ClusterIP
  selector:
    name: backend-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
  namespace: backend
spec:
  type: ClusterIP
  selector:
    name: backend-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
