gcp/compute/gke/services/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: backend
spec:
  type: ClusterIP
  selector:
    name: backend-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
